tests/snapshots/cli__lox@counter.lox.snap
---
source: tests/cli.rs
expression: cmd.arg(path).assert()
input_file: test-files/counter.lox
---
Assert {
    output: Output {
        status: ExitStatus(
            unix_wait_status(
                0,
            ),
        ),
        stdout: "1\n2\n",
        stderr: "",
    },
}
