tests/snapshots/cli__lox@fib.lox.snap
---
source: tests/cli.rs
expression: cmd.arg(path).assert()
input_file: test-files/fib.lox
---
Assert {
    output: Output {
        status: ExitStatus(
            unix_wait_status(
                0,
            ),
        ),
        stdout: "0\n1\n1\n2\n3\n5\n8\n13\n21\n34\n55\n89\n144\n233\n377\n610\n987\n1597\n2584\n4181\n6765\n",
        stderr: "",
    },
}
