tests/snapshots/cli__lox@scope.lox.snap
---
source: tests/cli.rs
expression: cmd.arg(path).assert()
input_file: test-files/scope.lox
---
Assert {
    output: Output {
        status: ExitStatus(
            unix_wait_status(
                0,
            ),
        ),
        stdout: "inner a\nouter b\nglobal c\nouter a\nouter b\nglobal c\nglobal a\nglobal b\nglobal c\n",
        stderr: "",
    },
}
