tests/snapshots/cli__lox@simple.lox.snap
---
source: tests/cli.rs
expression: cmd.arg(path).assert()
input_file: test-files/simple.lox
---
Assert {
    output: Output {
        status: ExitStatus(
            unix_wait_status(
                0,
            ),
        ),
        stdout: "one\ntrue\n3\n",
        stderr: "",
    },
}
